# gh-airforce-sys--api

./: .env  .gitignore  20210408164027_create_persons_table.sql  requirements.txt  server.py  test.py
app/: pyproject.toml
app/app/: __init__.py  actions.py  config.py  db.py  main.py  models.py  schemas.py
app/app/db/: __init__.py  base.py
app/migrations/: env.py
app/migrations/versions/: 08c2534918f9_create_user_table.py  0b263a938e76_create_user_table.py  18d91aad6c1f_create_user_table.py  25ea026ed1b3_create_user_table.py  270c9969ea39_create_user_table.py  46e0180751fc_create_user_table.py  53012f945bd9_create_user_table.py  5e881b935ab0_create_user_table.py  9311a0b437b6_create_user_table.py  96d5215190f7_create_user_table.py  cc1a1d7d1970_create_user_table.py  ddaef633ce8c_create_user_table.py  eccd8bf3c3f8_create_user_table.py  f0572c0765a2_create_user_table.py
bluestorm/: config.py  dependencies.py  main.py
bluestorm/models/: access_tokens.py  base.py  persons.py  rank_categories.py  ranks.py  users.py  wings.py
bluestorm/repos/: rank_categories.py  ranks.py  wings.py
bluestorm/routers/: access_tokens.py  persons.py  rank_categories.py  ranks.py  users.py  wings.py
db/: schema.sql
db/migrations/: 20210408232528_create_wings_table.sql  20210409002552_create_rank_categories_table.sql  20210411103244_create_ranks_table.sql
